attempts to implement button logic in Telegram bot