@@ -1,7 +1,6 @@
 package org.example.command;
 
 import lombok.SneakyThrows;
-import org.example.command.decimal_places.ButtonCommandTwo;
 import org.telegram.telegrambots.extensions.bots.commandbot.commands.BotCommand;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Chat;
@@ -10,12 +9,12 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMa
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.telegram.telegrambots.meta.bots.AbsSender;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.List;
 
 public class DecimalPlaces extends BotCommand {
     public DecimalPlaces() {
-        super("decimal places", "Кількість знаків після коми");
+        super("decimal places", "Кількість знаків після коми:");
     }
 
     @Override
@@ -23,31 +22,24 @@ public class DecimalPlaces extends BotCommand {
     public void execute(AbsSender absSender, User user, Chat chat, String[] strings) {
         SendMessage message = new SendMessage();
         message.setChatId(chat.getId());
-        InlineKeyboardButton twoDecimal = InlineKeyboardButton.builder()
-                .text("2")
-                .callbackData(new ButtonCommandTwo().getCommandIdentifier())
-                .build();
-        InlineKeyboardButton threeDecimal = InlineKeyboardButton.builder()
-                .text("3")
-                .callbackData("three")
-                .build();
-        InlineKeyboardButton fourDecimal = InlineKeyboardButton.builder()
-                .text("4")
-                .callbackData("four")
-                .build();
+
+        List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
+        for (int i = 2; i < 5; i++) {
+            InlineKeyboardButton button = InlineKeyboardButton.builder()
+                    .text(String.valueOf(i))
+                    .callbackData("decimal places_" + i)
+                    .build();
+            buttons.add(List.of(button));
+        }
         InlineKeyboardButton backButton = InlineKeyboardButton.builder()
                 .text("Назад🔙")
                 .callbackData("command back")
                 .build();
-        InlineKeyboardMarkup keyboard = InlineKeyboardMarkup.builder()
-                .keyboard(Arrays.asList(
-                        Collections.singletonList(twoDecimal),
-                        Collections.singletonList(threeDecimal),
-                        Collections.singletonList(fourDecimal),
-                        Collections.singletonList(backButton)
-                ))
-                .build();
+        buttons.add(List.of(backButton));
         message.setText("Кількість знаків після коми:");
+        InlineKeyboardMarkup keyboard = InlineKeyboardMarkup.builder()
+                .keyboard(buttons)
+                        .build();
         message.setReplyMarkup(keyboard);
         absSender.execute(message);
     }
